# svc-devops-test

./: .cspell.config.yaml  .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.compose/: README.md
.compose/aetheric-cache/: services.yaml
.compose/aetheric-db/: services.yaml
.compose/aetheric-gis/: services.yaml
.compose/aetheric-queue/: services.yaml
.compose/aetheric-svc/: .env.vars  base.yaml  rust-coverage.yaml  rust-test.yaml  services.yaml  svc.yaml  svc.yaml.tftpl  test-server.yaml  test-server.yaml.tftpl
.github/workflows/: autosquash.yml  post_release.yml  pr_rebase.yml  python_ci.yml  release.yml  release_docs.yml  rust_ci.yml
.make/: rust.mk
client-grpc/: Cargo.toml
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: rest.rs
docs/: conops.md  icd.md  sdd.md
proto/: svc-template-rust-grpc.proto
scripts/: release_checklist.py
server/: Cargo.toml  README.md
server/src/: config.rs  grpc.rs  lib.rs  main.rs
server/src/grpc/: client.rs  server.rs
server/src/rest/: mod.rs  server.rs
server/src/rest/api/: example.rs  health.rs  mod.rs
server/tests/: integration_test.rs
tests/: __init__.py
