[package]
description = "Arrow devops test service GRPC client"
edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
keywords    = ["vtol", "client"]                                           # max 5
license     = "BUSL-1.1"
name        = "svc-devops-test-client-grpc"
repository  = "https://github.com/Arrow-air/svc-devops-test"
version     = "0.0.2-develop.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11.0"
prost-types = "0.11.1"
tonic       = "0.8.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "grpc"
