[package]
description = "Aetheric devops-test service gRPC client"
keywords    = ["vtol", "client", "grpc", "devops-test"]  # max 5
name        = "svc-devops-test-client-grpc"
version     = "0.1.5-develop.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio"]
test_util = ["mock", "stub_backends", "tokio"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "svc-devops-test/stub_server",
  "lib-common/grpc_mock",
  "hyper-util",
  "tower",
  "tokio",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-devops-test"]

[dependencies]
cfg-if          = "1.0"
hyper-util      = { version = "0.1", optional = true }
log             = { version = "0.4" }
prost           = "0.13"
svc-devops-test = { path = "../server", optional = true }
tonic           = "0.12"
tower           = { version = "0.5", optional = true }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "latest-develop"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.40"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the required modules for testing
[dev-dependencies.svc-devops-test-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
