[package]
description = "Arrow devops test service GRPC server"
edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
keywords    = ["vtol", "server", "devops-test"]                            # max 5
license     = "BUSL-1.1"
name        = "svc-devops-test"
repository  = "https://github.com/Arrow-air/svc-devops-test"
version     = "0.0.2-develop.11"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
cargo-husky  = "1"
chrono       = { version = "0.4", features = ["serde"] }
hyper        = "0.14"
lib-common   = { git = "https://github.com/Arrow-air/lib-common.git", branch = "develop" }
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.20", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.7"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"
